[package]
name = "tonic"
version = "0.1.0"
authors = ["zfdavis <zfdavis21@gmail.com>"]
edition = "2018"
description = "A basic music theory and synthesis library."
readme = "README.md"
repository = "https://github.com/zfdavis/tonic"
license = "MIT OR Apache-2.0"
keywords = ["music", "synth"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
