[package]
name = "tonal"
version = "0.1.3"
authors = ["zfdavis <zfdavis21@gmail.com>"]
edition = "2018"
description = "A basic music theory and synthesis library."
readme = "README.md"
repository = "https://github.com/zfdavis/tonal"
license = "MIT"
keywords = ["music", "synth"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
